--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-cayman
+
+[[params.social]] icon = "linkedin" icon_pack = "fa" link = "//linkedin.com/in/michaelaylesbury"
+
+[[params.social]] icon = "github" icon_pack = "fa" link = "//github.com/moaylesbury"
+
+[[params.social]] icon = "file" icon_pack = "fa" link = "//twitter.com/USERNAME"
