--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Michael Aylesbury
-logo: /assets/img/logo.png
+logo: /portrait.jpeg
 description: Based in Edinburgh, Scotland
 show_downloads: true
 google_analytics:
